book button alignment fix

--- a/FlightBookingUI/src/app/flight-listing/flight-listing.component.scss
+++ b/FlightBookingUI/src/app/flight-listing/flight-listing.component.scss
@@ -53,5 +53,8 @@
                 font-weight: 400;
             }
         }
+        .book-button{
+            padding: 1%;
+        }
     }
 }
